web-infras/parser/tests/fixtures/babel/es2017/async-functions/await-function-declaration-name-inside-async-function/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (2,12)
2|  function await() {}
 |          ^
